Fix card cabinet display bug and re-order functions in script for readability

--- a/style.css
+++ b/style.css
@@ -150,9 +150,8 @@ main {
 }
 
 .drawer-div {
-  width: clamp(4rem, 95%, 9rem);
+  width: clamp(4rem, 95%, fit-content);
   position: relative;
-  width: fit-content;
   height: auto;
 }
 
@@ -313,7 +312,8 @@ article[data-bookref='00'], .card-template {
   left: 0;
   right: 0;
   display: none;
-  background-color: orange;
+  background-color: var(--card-color);
+  border: 2px solid var(--drawer-outline-color);
   border-radius: 15px;
   flex-direction: column;
   align-items: center;
